# ShumIDE

./: README.md  build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/io/github/starmage27/shumide/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/io/github/starmage27/shumide/: HomeViewModel.kt  MainActivity.kt  OutputTransformationHighlight.kt  Utils.kt
app/src/main/java/io/github/starmage27/shumide/data/: StyleSpan.kt
app/src/main/java/io/github/starmage27/shumide/routes/: HomeRoute.kt
app/src/main/java/io/github/starmage27/shumide/ui/: ComposableUtils.kt  DropdownMenu.kt  HomeScreen.kt
app/src/main/java/io/github/starmage27/shumide/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/io/github/starmage27/shumide/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
tree-sitter-bridge/: Cargo.toml  uniffi_bindgen.rs
tree-sitter-bridge/src/: lib.rs  ts_bridge_error.rs  ts_language.rs  unwrap_log_errors.rs
