[package]
name = "tree-sitter-bridge"
version = "0.1.0"
edition = "2024"

[dependencies]
uniffi = { version = "0.29.4", features = ["cli"]}
anyhow = "1.0.99"
tree-sitter = "0.25.8"

tree-sitter-asm = "0.24.0"
tree-sitter-c = "0.24.1"
tree-sitter-cpp = "0.23.4"
tree-sitter-c-sharp = "0.23.1"
tree-sitter-objc = "3.0.2"

tree-sitter-java = "0.23.5"
tree-sitter-kotlin-ng = "1.1.0"

tree-sitter-rust = "0.24.0"
tree-sitter-zig = "1.1.2"
tree-sitter-gleam = "1.0.0"
tree-sitter-odin = "1.3.0"

tree-sitter-glsl = "0.2.0"
tree-sitter-hlsl = "0.2.0"
#tree-sitter-wgsl = "0.0.6"
#tree-sitter-wgsl-bevy = "0.1.3"

tree-sitter-javascript = "0.23.1"
tree-sitter-typescript = "0.23.2"
tree-sitter-php = "0.23.11"

tree-sitter-haskell = "0.23.1"
tree-sitter-go = "0.23.4"
tree-sitter-ruby = "0.23.1"
tree-sitter-python = "0.23.6"
tree-sitter-swift = "0.7.1"
tree-sitter-lua = "0.2.0"

tree-sitter-clojure = "0.1.0"
tree-sitter-r = "1.2.0"
tree-sitter-elixir = "0.3.4"
tree-sitter-ocaml = "0.24.2"
tree-sitter-scala = "0.24.0"

tree-sitter-toml-ng = "0.7.0"
tree-sitter-cmake = "0.7.1"
tree-sitter-nix = "0.3.0"
tree-sitter-regex = "0.24.3"
tree-sitter-yaml = "0.7.1"
tree-sitter-json = "0.24.8"
tree-sitter-html = "0.23.2"
tree-sitter-css = "0.23.2"
tree-sitter-md = "0.3.2"
tree-sitter-sequel = "0.3.8"

strum = "0.27.2"
strum_macros = "0.27.2"
async-std = "1.13.2"



[lib]
crate-type = ["cdylib"]
name = "treesitterbridge"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi_bindgen.rs"
